add more env variables

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     container_name: ${APP_NAME}_wp
     image: wordpress:${WP_VERSION}-php7.4-fpm-alpine # https://hub.docker.com/_/wordpress/
     ports:
-      - ${IP}:80:80 # change ip if required
+      - ${IP}:${WP_PORT}:80 # change ip if required
     volumes:
       - ./config/php.conf.ini:/usr/local/etc/php/conf.d/conf.ini
       - ${WP_PATH}:/var/www/html # Full wordpress project
@@ -40,7 +40,7 @@ services:
       PMA_PORT: 3306
       MYSQL_ROOT_PASSWORD: "${DB_ROOT_PASSWORD}"
     ports:
-      - ${IP}:8080:80
+      - ${IP}:${PMA_PORT}:80
     links:
       - db:db
 
