--- a/.env.example
+++ b/.env.example
@@ -3,5 +3,9 @@ IP=127.0.0.1
 DB_ROOT_PASSWORD=password
 DB_NAME=wordpress
 DB_PORT=3306
+
+PMA_PORT=80
+
+WP_PORT=80
 WP_VERSION=5.4.2
 WP_PATH=./wp-app
